--- a/index.html
+++ b/index.html
@@ -1,21 +1,78 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Luthfi Khairul Insan - GIS Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Luthfi Khairul Insan - GIS & Remote Sensing Portfolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      background: #f4f4f9;
+      color: #333;
+    }
+    header {
+      background: #1e3a8a;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+    }
+    .container {
+      width: 80%;
+      margin: auto;
+      overflow: hidden;
+      padding: 20px;
+    }
+    section {
+      background: #fff;
+      margin-bottom: 20px;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    h2 {
+      color: #1e3a8a;
+    }
+    a {
+      color: #1e40af;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-  <h1>Selamat datang di Portofolio GIS saya</h1>
-  <p>Saya Luthfi Khairul Insan, seorang Geospatial Analyst dengan pengalaman dalam pemetaan, analisis spasial, dan remote sensing.</p>
-  <h2>📌 Projects</h2>
-  <ul>
-    <li>Analisis Hotspot Karhutla Sumatera (Google Earth Engine)</li>
-    <li>Pemetaan Kepadatan Penduduk (QGIS)</li>
-    <li>Survey Lapangan dengan Drone</li>
-  </ul>
-  <h2>📝 Blog / Tutorial</h2>
-  <p>Nantinya di sini saya akan menulis tutorial GIS, QGIS, GEE, dan Python.</p>
-  <h2>📧 Kontak</h2>
-  <p>Email: luthfi@example.com | LinkedIn: <a href="https://linkedin.com/in/namakamu">Profil Saya</a></p>
+  <header>
+    <h1>Luthfi Khairul Insan</h1>
+    <p>Geospatial Analyst | GIS Specialist</p>
+  </header>
+
+  <div class="container">
+    <section>
+      <h2>📌 Projects</h2>
+      <ul>
+        <li>Analisis Hotspot Karhutla Sumatera (Google Earth Engine)</li>
+        <li>Pemetaan Kepadatan Penduduk (QGIS)</li>
+        <li>Survey Lapangan dengan Drone</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>📝 Blog / Tutorial</h2>
+      <p>Nantinya di sini saya akan menulis tutorial GIS, QGIS, GEE, dan Python.</p>
+    </section>
+
+    <section>
+      <h2>📧 Kontak</h2>
+      <p>Email: <a href="mailto:luthfi@example.com">luthfi@example.com</a></p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/namakamu">Profil Saya</a></p>
+    </section>
+  </div>
 </body>
 </html>
