--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
     <section>
       <h2>📧 Kontak</h2>
-      <p>Email: <a href="mailto:luthfi@example.com">luthfi@example.com</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/namakamu">Profil Saya</a></p>
+      <p>Email: <a href="mailto:luthfiinsan1721@gmail.com">luthfiinsan1721@gmail.com</a></p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/luthfiinsan">Profil Saya</a></p>
     </section>
   </div>
 </body>
