--- a/index.html
+++ b/index.html
@@ -1,78 +1,38 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Luthfi Khairul Insan - GIS & Remote Sensing Portfolio</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 0;
-      background: #f4f4f9;
-      color: #333;
-    }
-    header {
-      background: #1e3a8a;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-    }
-    .container {
-      width: 80%;
-      margin: auto;
-      overflow: hidden;
-      padding: 20px;
-    }
-    section {
-      background: #fff;
-      margin-bottom: 20px;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    h2 {
-      color: #1e3a8a;
-    }
-    a {
-      color: #1e40af;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <title>Luthfi Khairul Insan - Geospatial Analyst</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Navbar -->
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero Section -->
   <header>
     <h1>Luthfi Khairul Insan</h1>
     <p>Geospatial Analyst | GIS Specialist</p>
+    <a href="portfolio.html" class="btn">Lihat Portfolio</a>
   </header>
 
-  <div class="container">
-    <section>
-      <h2>📌 Projects</h2>
-      <ul>
-        <li>Analisis Hotspot Karhutla Sumatera (Google Earth Engine)</li>
-        <li>Pemetaan Kepadatan Penduduk (QGIS)</li>
-        <li>Survey Lapangan dengan Drone</li>
-      </ul>
-    </section>
+  <!-- Intro Section -->
+  <section>
+    <h2>Welcome</h2>
+    <p>Selamat datang di personal blog saya. Di sini saya berbagi pengalaman, tulisan, dan project di bidang GIS, remote sensing, serta dunia geospasial.</p>
+  </section>
 
-    <section>
-      <h2>📝 Blog / Tutorial</h2>
-      <p>Nantinya di sini saya akan menulis tutorial GIS, QGIS, GEE, dan Python.</p>
-    </section>
-
-    <section>
-      <h2>📧 Kontak</h2>
-      <p>Email: <a href="mailto:luthfiinsan1721@gmail.com">luthfiinsan1721@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/luthfiinsan">Profil Saya</a></p>
-    </section>
-  </div>
+  <footer>
+    <p>© 2025 Luthfi Khairul Insan</p>
+  </footer>
 </body>
 </html>
