--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Luthfi Khairul Insan - Geospatial Analyst</title>
+  <title>Luthfi Khairul Insan | GIS Specialist</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,19 +18,26 @@
     </ul>
   </nav>
 
-  <!-- Hero Section -->
-  <header>
-    <h1>Luthfi Khairul Insan</h1>
-    <p>Geospatial Analyst | GIS Specialist</p>
-    <a href="portfolio.html" class="btn">Lihat Portfolio</a>
-  </header>
+  <!-- Konten Utama -->
+  <main>
+    <!-- Hero Section -->
+    <header>
+      <h1>Luthfi Khairul Insan</h1>
+      <p>Geospatial Analyst | GIS Specialist</p>
+      <a href="portfolio.html" class="btn">Lihat Portfolio</a>
+    </header>
 
-  <!-- Intro Section -->
-  <section>
-    <h2>Welcome</h2>
-    <p>Selamat datang di personal blog saya. Di sini saya berbagi pengalaman, tulisan, dan project di bidang GIS, remote sensing, serta dunia geospasial.</p>
-  </section>
+    <!-- Welcome Section -->
+    <section>
+      <h2>Welcome</h2>
+      <p>
+        Selamat datang di personal blog saya. Di sini saya berbagi pengalaman, 
+        tulisan, dan project di bidang GIS, remote sensing, serta dunia geospasial.
+      </p>
+    </section>
+  </main>
 
+  <!-- Footer -->
   <footer>
     <p>© 2025 Luthfi Khairul Insan</p>
   </footer>
